# pr1-group07-b08

./: QRコード.docx  README.md  start.sh
chari-spot/: .gitignore
chari-spot/backend/: chari-spot.db  pyproject.toml
chari-spot/backend/app/: main.py
chari-spot/backend/app/crud/: parking.py  user.py
chari-spot/backend/app/models/: parking.py  user.py
chari-spot/backend/app/routers/: parking.py  user.py
chari-spot/backend/app/schemas/: __init__.py  user.py
chari-spot/backend/crud/: parking.py  user.py
chari-spot/backend/models/: parking.py
chari-spot/backend/routers/: parking.py  user.py
chari-spot/backend/schemas/: parking.py  user.py
chari-spot/backend/src/app/: auth.py  database.py  main.py
chari-spot/backend/src/crud/: parking.py  payment.py  user.py
chari-spot/backend/src/models/: parking.py  payment.py  user.py
chari-spot/backend/src/qr/: make_qr.py
chari-spot/backend/src/routers/: parking.py  payment.py  qr.py  user.py
chari-spot/backend/src/schemas/: parking.py  payment.py  user.py
chari-spot/backend/test/: crud_test.py
chari-spot/camera-system/src/app/: main.py
chari-spot/camera-system/src/utils/: bicycle_detector.py  camera_manager.py
chari-spot/camera_system/: README.md  pyproject.toml
chari-spot/camera_system/src/app/: main.py
chari-spot/camera_system/src/utils/: bicycle_detector.py  camera_manager.py
chari-spot/frontend/: pubspec.yaml
chari-spot/frontend/lib/: login_screen.dart  main.dart  main_screen.dart  map_screen.dart  parking_detail_screen.dart  parking_update.dart  profile_screen.dart  register_screen.dart  registration.dart
chari-spot/frontend/web/: index.html
