[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ReiMatsui <rei0203@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
