[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ReiMatsui <rei0203@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"
pydantic = {extras = ["email"], version = "^2.11.3"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.2.0"
bcrypt = "3.2.2"
pytest = "^8.3.5"
python-jose = "^3.4.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
