[tool.poetry]
name = "camera_system"
version = "0.1.0"
description = ""
authors = ["ReiMatsui <rei0203@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "<=4.11.0.86"
loguru = "^0.7.3"
pydantic = "^2.11.4"
ultralytics = "^8.3.113"
torch = "2.2"
numpy = "1.26.4"
httpx = "^0.28.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
